src/app/components/dashboard/dashboard.component.css
.capitec{
    background-color: #17a2b8 !important;
}
.standard-bank{
    background-color: #3700ce !important;
    color: #fff;
}
.absa{
    background-color: #ff0101 !important;
    color: #fff;
}
.fnb{
    background-color: #07d100 !important;
}
.nedbank{
    background-color: #035c00 !important;
    color: #fff;
}

